# esp32_wifi_ble_coexist_template

./: .gitignore  CMakeLists.txt  readme.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/inc/: ble_activity.h  main.h  wifi_activity.h
partition_table/: partitionTable.csv
spiffs/: dashboard.html  index.html  siimple-icons.css  siimple.min.css
